Mejoras en diseño y se agrega datos de impuestos en conceptos

--- a/CFDI.BuildPdf/Templates/TemplateCondicionesContrato.cshtml
+++ b/CFDI.BuildPdf/Templates/TemplateCondicionesContrato.cshtml
@@ -50,7 +50,7 @@
             <span style="float: right;"><strong>Folio Fiscal:</strong> @Model.UUID</span>
         </div>
 
-        <div class="title" style="border: solid 1px; padding:5px;">
+		<div class="title" style="border: solid 1px #ccc; padding:5px;">
             Condiciones del Contrato de Transporte que Ampara esta Carta Porte
         </div>
 
